CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_KA_Engagement__c/SDO_Analytics_KA_Engagement__c.object-meta.xml
<CustomObject>
    <description>Shadow object for Knowledge Article Engagement telemetry. Stores synthetic engagement rows for Service Insights Knowledge Performance dashboard and feeds ssot__KnowledgeArticleEngagement__dlm via Salesforce connector data stream.</description>
    <label>SDO Analytics KA Engagement</label>
    <nameField>
        <displayFormat>KAE-{00000}</displayFormat>
        <label>SDO Analytics KA Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SDO Analytics KA Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>