CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_KA_Engagement__c/fields/Knowledge_Article_User_Type__c.field-meta.xml
<CustomField>
    <fullName>Knowledge_Article_User_Type__c</fullName>
    <label>Knowledge Article User Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
                <default>true</default>
                <label>Internal</label>
            </value>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>Guest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>