CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_KA_Engagement__c/fields/Source_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Reference_Id__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Source Reference ID</label>
    <referenceTo>Case</referenceTo>
    <relationshipName>KaEngagementSourceReference</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>