CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_KA_Engagement__c/fields/Source_Reference_Object__c.field-meta.xml
<CustomField>
    <fullName>Source_Reference_Object__c</fullName>
    <label>Source Reference Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>