CloudAlpacas-repo/salesforce/main/default/objects/SDO_Analytics_KA_Engagement__c/fields/Used_For_Grounding__c.field-meta.xml
<CustomField>
    <fullName>Used_For_Grounding__c</fullName>
    <label>Used For Grounding</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>true</fullName>
            </value>
            <value>
                <fullName>false</fullName>
                <default>true</default>
                <label>false</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>